Fix z-index on actions

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -10,6 +10,11 @@ a:hover {
   text-decoration: none;
 }
 
+.actions {
+  position:relative;
+  z-index:100;
+}
+
 .actions div {
   cursor:pointer;
 }
